@@ -14,8 +14,9 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>3.141.59</version>
+			<version>4.12.1</version> <!-- Use the latest version here -->
 		</dependency>
+
 		<!-- TestNG -->
 		<dependency>
 			<groupId>org.testng</groupId>
@@ -24,6 +25,13 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- SLF4J API -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>31.1-jre</version> <!-- or another compatible version -->
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -132,16 +140,16 @@
 		</dependency>
 
 		<!-- Google -->
-			<dependency>
-				<groupId>com.google.api-client</groupId>
-				<artifactId>google-api-client</artifactId>
-				<version>1.32.1</version>
-			</dependency>
-			<dependency>
-				<groupId>com.google.oauth-client</groupId>
-				<artifactId>google-oauth-client-jetty</artifactId>
-				<version>1.32.1</version>
-			</dependency>
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>1.32.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.oauth-client</groupId>
+			<artifactId>google-oauth-client-jetty</artifactId>
+			<version>1.32.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>io.github.cdimascio</groupId>
@@ -155,20 +163,13 @@
 			<artifactId>json</artifactId>
 			<version>20210307</version>
 		</dependency>
+
 		<!-- Send grid -->
 		<dependency>
 			<groupId>com.sendgrid</groupId>
 			<artifactId>sendgrid-java</artifactId>
 			<version>4.9.3</version>
 		</dependency>
-
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.28</version> <!-- or the latest version -->
-			<scope>provided</scope>
-		</dependency>
-
 	</dependencies>
 
 	<repositories>
@@ -182,31 +183,15 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version> <!-- or 2.22.1 -->
-				<configuration>
-					<suiteXmlFiles>
-						<suiteXmlFile>src/test/java/testRunners/bookingFlow.xml</suiteXmlFile>
-					</suiteXmlFiles>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.11.0</version>
 				<configuration>
 					<source>22</source>
 					<target>22</target>
 					<compilerArgs>
 						<arg>--enable-preview</arg>
-						<arg>--add-opens</arg>
-						<arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg> <!-- Added line -->
 					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
-
-
 	</build>
 </project>
